--- a/public/tuiter/HomeScreen/index.css
+++ b/public/tuiter/HomeScreen/index.css
@@ -1,10 +1,125 @@
+.wd-margin-bottom-null{
+    margin-bottom: 0%;
+}
+
+.wd-margin-right-null{
+    margin-right: 0;
+}
+
+.wd-padding-null{
+    padding: 0;
+}
+
+.wd-padding-left{
+    padding-left: 3px;
+}
+
+
+.wd-input-icons i {
+    position: absolute;
+}
+
+.wd-input-icons {
+    width: 100%;
+    margin-bottom: 3px;
+}
+
+.wd-icon {
+    padding: 10px;
+    min-width: 40px;
+}
+
+.wd-input-field {
+    width: 100%;
+    padding: 10px;
+    text-indent: 35px;
+    background-color: white;
+}
+
+.wd-search-icon {
+    margin: 15px;
+    font-size: 20px;
+    color: #4f5050;
+}
+
+.wd-setting-icon{
+    margin: 12px;
+    font-size: x-large;
+    color: dodgerblue;
+}
+
+.wd-search-bar-width {
+    width:90%;
+}
+
+.wd-more-size{
+    font-size: large;
+}
+
+.wd-image-icon{
+    height: 80px;
+    width: 80px;
+    float: right;
+    border-radius: 25px;
+}
+
+.wd-image-icon2{
+    height: 37px;
+    width: 37px;
+    border-radius: 20px;
+}
+
+.wd-container {
+    position: relative;
+}
+
+.wd-bottom-left {
+    color: white;
+    font-size: 30px;
+    font-style: bold;
+    margin: 0px;
+    z-index: 2;
+    position: absolute;
+    right: 0;
+    bottom: 0;
+    left: 0;
+}
+
+.wd-font-size-side{
+    font-size: 14px;;
+}
+
+.wd-padding-left-side{
+    padding-left: 10px;
+}
+
+.wd-image{
+    width:100%;
+    margin-left:0px;
+}
+
+.wd-margin-mid{
+    margin-left: 13px;
+}
+
+.wd-border-link{
+    border-bottom-style: solid;
+    border-width: 5px;
+    border-color: rgb(30,144,255);
+}
+
+.wd-mr{
+    margin-right: 25px;
+    margin-left: 4px;
+}
+
 a {
     text-decoration: none;
 }
 
 .wd-border {
     border: 1px solid rgb(47, 51, 54);
-    max-width: 566px;
+    max-width: 900px;
     padding: 12px 16px;
 }
 
@@ -45,7 +160,7 @@ a {
 }
 
 .wd-three-dots {
-    margin-left: 180px;
+    margin-left: 250px;
     color: rgb(110, 118, 125);
 }
 
@@ -64,7 +179,7 @@ a {
 .wd-tuit-img-description {
     padding: 12px;
     margin-top: 0;
-    width: 480px;
+    width: 504px;
     border-width:1px;
     border-style:solid;
     border-radius: 0 0 10px 10px;
@@ -100,8 +215,8 @@ a {
 }
 
 .wd-reaction-bar {
-    width: 506px;
-    margin-left: 16px;
+    width: 530px;
+    margin-left: 28px;
     padding-bottom: 4px;
     display: flex;
     justify-content: space-between;
